package game.review.dto;

import java.util.Set;

public class ReviewCategoryDTO {
    private int id;
    private String name;
    private Set<ReviewCategoryScoreDTO> categoryScores;
}
