@startuml
left to right direction

class users {
  +int id
  +Date created_at
  +Date updated_at
  +String username
  +String email
  +String first_name?
  +String last_name?
  +String bio?
  +String thumbnail_src?
}

class games {
  +int id
  +Date created_at
  +Date updated_at
  +String title
  +String description
  +String thumbnail_src?
}

class game_tags {
  +int id
  +int game_id
  +int tag_id
}

class tags {
  +int id
  +String name
  +String description
}

class reviews {
  +int id
  +int user_id
  +int game_id
  +Date created_at
  +Date updated_at
}

class review_categories {
  +int id
  +String name
}

class review_category_scores {
  +int id
  +int review_category_id
  +int review_id
  +float score
  +String opinion?
}

users "One" -- "Many" reviews
reviews "One" -- "Many" review_category_scores
review_categories "One" -- "Many" review_category_scores
games "One"  -- "Many" reviews
games "One" -- "Many" game_tags
tags "One" -- "Many" game_tags
@enduml